--- a/project1-Myportfolio/Code/About.html
+++ b/project1-Myportfolio/Code/About.html
@@ -23,6 +23,7 @@
 <header>
   <div>  <i class="fas fa-code-branch"></i> Roaa Abu-shaqrah  </div>
 </header>
+<section>
 <nav>
   <ul>
     
@@ -32,7 +33,7 @@
     
   </ul>
 </nav>
-
+</section>
 <!-- start the 3td page-->
   <div class="grid-container">
   
