--- a/project1-Myportfolio/Code/index.html
+++ b/project1-Myportfolio/Code/index.html
@@ -23,7 +23,7 @@
 <header>
   <div>  <i class="fas fa-code-branch"></i> Roaa Abu-shaqrah  </div>
 </header>
-
+<section>
 <nav>
   <ul>
     <!-- i tage for icon-->
@@ -33,7 +33,7 @@
     
   </ul>
 </nav>
-
+</section>
 <!--- used SVG for design -->
 <div class="curved">
 
@@ -43,7 +43,7 @@
 <!-- this the link foe svg design,Iused  make some wave web site-->
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 319"><path fill="#ffffff" fill-opacity="1" d="M0,32L26.7,37.3C53.3,43,107,53,160,69.3C213.3,85,267,107,320,128C373.3,149,427,171,480,181.3C533.3,192,587,192,640,170.7C693.3,149,747,107,800,112C853.3,117,907,171,960,170.7C1013.3,171,1067,117,1120,85.3C1173.3,53,1227,43,1280,64C1333.3,85,1387,139,1413,165.3L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"></path></svg>
 </div>
-</section>
+
   
 <!-- this is the end of page-->
   
