--- a/project1-Myportfolio/Code/index.html
+++ b/project1-Myportfolio/Code/index.html
@@ -19,7 +19,7 @@
 <meta name="keyword" content="web developer, freelancer, Jordan,Front-end,back-end">
  </head>
 <body >
-     <!-- start the first page -->
+     <!--<img src="image/nature.png">-->
 <header>
   <div>  <i class="fas fa-code-branch"></i> Roaa Abu-shaqrah  </div>
 </header>
